Se modifico el archivo index y se agrego un nuevo archivo estilo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>KRS blog</h1>
+    <blockquote>Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin tratar de abrirlos jamás. René Descartes.</blockquote>
 </body>
 </html>
