Cambié el autor a Ozuna

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>KRS blog</h1>
-    <blockquote>Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin tratar de abrirlos jamás. René Descartes.</blockquote>
+    <blockquote>Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin tratar de abrirlos jamás. Ozuna.</blockquote>
 </body>
 </html>
