Se cambió el autor a Ozuna nuevamente

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>KRS blog</h1>
-    <blockquote>Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin tratar de abrirlos jamás. RENE DESCARTES.</blockquote>
+    <blockquote>Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin tratar de abrirlos jamás. Ozuna.</blockquote>
    
 </body>
 </html>
